feat(cartItem): Create removeProductFromCart endpoint